--- a/templates/patient-registration.html
+++ b/templates/patient-registration.html
@@ -183,7 +183,7 @@
               <div class="col-md-12 side-menu-title">
                 <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                   <span style="background-color:#e6edfa; padding: 0 10px;">
-                    <span class="glyphicon glyphicon-triangle-bottom"></span>
+                    <span class="fa fa-dot-circle-o"></span>
                     <h2>{{ 'PATIENT_REGISTRATION_SEARCH_HEADER' | translate }}</h2>
                   </span>  
                 </div>  
@@ -251,7 +251,7 @@
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>{{ 'EMAIL' | translate }} & {{ 'PASSWORD' | translate }}</h2>
                     </span>  
                   </div>  
@@ -318,7 +318,7 @@
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>{{ 'LANGUAGE' | translate }}</h2>
                     </span>  
                   </div>  
@@ -348,7 +348,7 @@
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>{{ 'CELLPHONE_NUMBER' | translate }}</h2>
                     </span>  
                   </div>  
@@ -380,7 +380,7 @@
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>{{ 'SECURITY_QUESTIONS' | translate }}</h2>
                     </span>  
                   </div>  
@@ -493,11 +493,41 @@
                 </div>          
               </div>
 
+              <div class="row">
+                <div class="col-md-12 side-menu-title">
+                  <div style="height: 10px; border-bottom: 1px solid #6f5499;">
+                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                      <span class="fa fa-dot-circle-o"></span>
+                      <h2>{{ 'ACCESS_LEVEL_TITLE' | translate }}</h2>
+                    </span>  
+                  </div>  
+                </div>
+              </div>   
+              <div class="row">
+                <div class="col-md-12">
+                  <p style="margin-bottom: 10px;">
+                    <span style="color:#d9534f"><strong>{{ 'REQUIRED_FIELD' | translate }}:</strong></span>
+                    {{ 'ACCESS_LEVEL_DESCRIPTION' | translate }}
+                  </p>
+                </div>
+              </div>  
+              <div class="row" style="margin-bottom: 15px;">
+                <div class="col-md-5">
+                  <div class="row">
+                    <div class="col-md-5">
+                      <select ng-model="newPatient.accessLevel" ng-change="accessLevelUpdate()" ng-options="access.id as access.name for access in accessLevels" class="form-control">
+                        <option ng-hide="newPatient.accessLevel" value="">{{ 'SELECT_ACCESS_LEVEL' | translate }}</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>  
+              </div>
+
 							<div class="row">
                 <div class="col-md-12 side-menu-title">
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
-                      <span class="glyphicon glyphicon-triangle-bottom"></span>
+                      <span class="fa fa-dot-circle-o"></span>
                       <h2>{{ 'FINAL_CHECKS_TITLE' | translate }}</h2>
                     </span>  
                   </div>  
