--- a/templates/alias/edit.alias.html
+++ b/templates/alias/edit.alias.html
@@ -131,7 +131,7 @@
         <ul class="list-items">
           <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
             <label>
-              <input type="radio" ng-model="alias.eduMatSer" ng-change="eduMatUpdate()" ng-checked="alias.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
+              <input type="radio" ng-model="alias.eduMatSer" ng-change="eduMatUpdate(eduMat)" ng-checked="alias.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
             </label>
           </li>
         </ul>
